--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,8 @@
     margin: 0;
     padding: 0;
     width: 100%;
-    background-color: wheat;
-    box-shadow: inset 0px 0px 60px 20px rgba(0,0,0,0.5);
+    background-color: #333;
+    //box-shadow: inset 0px 0px 60px 20px rgba(0,0,0,0.5);
 }
 
 .cell, .cell:before {
@@ -36,6 +36,14 @@ _:-moz-tree-row(hover), .container {
     padding: 2px 0px;
 }   
 
+table, th, td {
+  //border: 1px solid black;
+}
+
+table {
+    margin: 20px;
+}
+
 td {
     text-align: center;
     -moz-user-select: none;
@@ -45,45 +53,211 @@ td {
 }
 
 .arrowTd {
-    font-size: 10px;
+    font-size: 20px;
+    color: #EEEEEE;
+    padding: 10px;
 }
 
 .letterTd{
-    border-width: 1px;
-    border-style: solid;
-    border-color: rgb(163, 161, 39);
-    border-radius: 10px;
-    width: 120px;
-    height: 120px;
+    min-width: 150px;
+    min-height: 150px;
+
 }
 
 .letterDiv {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Press Start 2P';
+    margin: 5px;
     font-weight: bold;
-    font-size: 32px;
+    font-size: 40px;
 }
 
 .letterDivInf {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Helvetica, sans-serif;
     font-weight: bold;
     font-size: 48px;
+    margin: 5px;
+
+}
+
+.autoConv {
+
+    font-family: 'VT323';
+    border-radius: 7px;
+    margin:  5px;
+    border:  2px solid #c7c7c7;
+
+}
+
+.autoConv .miniButton,
+.autoConv .miniButtonDisabled {
+
+    font-size: 10px;
+    height: 100%;
+    font-size: 20px;
+    display: inline-block;
+    cursor: pointer;
+    padding: 3px 10px;
+    color: #333;
+
+}
+
+.autoConv .title {
+    font-family: 'VT323';
+    font-size: 15px;
+    color: #888;
+    border-radius: 5px 5px 0 0;
+    padding:  2px 5px;
+    background-color: #c7c7c7;
+    min-height: 20px;
+    display: flex;
+}
+
+.autoConv .title span {
+    //border: 1px solid #000;
+    min-width: 20px;
+}
+
+.autoConv .from {
+    text-align: left;
+}
+
+.autoConv .mult {
+    text-align: right;
+}
+
+.autoConv .dots {
+    flex-grow: 1;
+    font-family: sans-serif;
+    font-size: 18px;
+    color: #FFF;
+    line-height: 1;
+}
+
+.autoConv .action {
+    display: flex;
+}
+
+.autoConv .add {
+    border-radius: 0 0 0 5px;
+    border-right:  2px solid #c7c7c7;
+}
+
+.autoConv .max {
+    border-radius: 0 0 5px 0;
+    border-left:  2px solid #c7c7c7;
+}
+
+.autoConv .level {
+    font-size: 20px;
+    flex-grow: 1;
+    padding: 3px 10px;
+    color:  #333;
 }
 
 .countDiv {
-    font-family: Tahoma;
-    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: VT323;
+}
+
+.countDiv .count {
+    font-size: 24px;
+    color:  #333;
+}
+
+.countDiv .change {
+    border: 2px solid #c7c7c7;
+    color: #333;
+    padding: 2px 5px;
+    margin-left: 5px;
+    border-radius: 5px;
+    font-size: 15px;
+
 }
 
 .letterBoxDiv {
-    width: 100%;
-    height: 100%;
-    cursor: default;
+    min-height: 100px;
+    max-width: 100%;
+    max-height: 100%;
+    padding: 5px;
+    background-color: #EEEEEE;
     border-radius: 10px;
     position: relative;
+    color:  #333;
+    border-width: 3px;
+    border-style: solid;
+    border-radius: 15px;
+    cursor: pointer;
+    box-shadow: 0px 10px;
+    color: #c7c7c7;
+    border-color: #c7c7c7;
+    transition: 0.1s;
+}
+
+.letterBoxDiv.letter-A,
+.letterBoxDiv.letter-B,
+.letterBoxDiv.letter-C,
+.letterBoxDiv.letter-D,
+.letterBoxDiv.letter-E {
+    color: #f54242;
+    border-color: #f54242;
+}
+
+.letterBoxDiv.letter-F,
+.letterBoxDiv.letter-G,
+.letterBoxDiv.letter-H,
+.letterBoxDiv.letter-I,
+.letterBoxDiv.letter-J {
+    color: #4287f5;
+    border-color: #4287f5;
+}
+
+.letterBoxDiv.letter-K,
+.letterBoxDiv.letter-L,
+.letterBoxDiv.letter-M,
+.letterBoxDiv.letter-N,
+.letterBoxDiv.letter-O {
+    color: #00d162;
+    border-color: #00d162;
+}
+
+.letterBoxDiv.letter-P,
+.letterBoxDiv.letter-Q,
+.letterBoxDiv.letter-R,
+.letterBoxDiv.letter-S,
+.letterBoxDiv.letter-T {
+    color: #f5cb42;
+    border-color: #f5cb42;
+}
+
+.letterBoxDiv.letter-U,
+.letterBoxDiv.letter-V,
+.letterBoxDiv.letter-W,
+.letterBoxDiv.letter-X,
+.letterBoxDiv.letter-Y,
+.letterBoxDiv.letter-Z {
+    color: #bc42f5;
+    border-color: #bc42f5;
+}
+
+.letterBoxDiv:hover{
+
+ //transform: translateY(-5px);
+ //box-shadow: 0px 15px;
+
+}
+
+
+.letterBoxDiv:active{
+
+ box-shadow: 0px 5px;
+ transform: translateY(5px);
+
 }
 
 .letterBoxDivPaused {
-    background-color:  #e4d8c4;
+    background-color:  #777;
 }
 
 .upgradeButton {
@@ -94,17 +268,7 @@ td {
     cursor: pointer;
 }
 
-.centerDiv{
-    align-content: center;
-    text-align: center;
-}
 
-.pauseButton {
-    width: 15px;
-    height: 15px;
-    font-size: 14px;
-    display: inline-block;
-}
 
 .optionsButton {
     position: absolute;
@@ -116,23 +280,12 @@ td {
     border: 1px solid black;
     border-radius: 3px;
     cursor: pointer;
-    /*width:40px;*/
     text-align: center;
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
 }
-
-.miniButton {
-    font-size: 22px;
-    display: inline-block;
-    margin: 3px;
-    cursor: pointer;
-    padding-left: 5px;
-    padding-right: 5px;
-}
-
 
 .hardResetButton {
     background: red;
@@ -156,18 +309,17 @@ td {
     background-color: rgba(0, 0, 0, 0.1);
 }
 
-.miniButtonDisabled {
-    background-color: #AAAAAA;
-    font-size: 22px;
-    display: inline-block;
-    margin: 3px;
-    cursor: default;
-    padding-left: 5px;
-    padding-right: 5px;
+.miniButton {
+    background-color: #FFFFFF;
 }
 
-.smallText {
-    font-size: 16px;
+.miniButtonDisabled {
+    background-color: #AAAAAA;
+}
+
+.smallText i {
+    font-size: 12px !important;
+    font-weight: bold;
 }
 
 .ownedText {
@@ -184,16 +336,31 @@ td {
     text-align: left;
 }
 
-.miniButtonMarginless {
-    margin: 1px;
-    padding-left: 1px;
-    padding-right: 1px;
+.pause {
+    position: absolute;
+    top: 5px;
+    left: 5px;
 }
 
-.topRightCorner {
+.settings {
     position: absolute;
-    top: 0px;
-    right: 0px;
+    top: 5px;
+    right: 5px;
+}
+
+.pause, .settings {
+
+    padding:  3px 7px;
+    border-radius: 100px;
+    border:  2px solid #c7c7c7;
+
+}
+
+.tooltip {
+
+    font-family: 'VT323';
+    font-size: 16px !important;
+
 }
 
 .altShiftStateDiv {
